--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
+    "redis": "^5.10.0",
     "twilio": "^5.11.2"
   },
   "devDependencies": {
